# alx-project-nexus-

./: .editorconfig  .env.example  .gitignore  API_OVERVIEW.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SECURITY_UPDATE_SUMMARY.md  TESTING.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
accounts/: admin.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
docker/: entrypoint.sh
docs/: DEPLOYMENT.md
docs/api/: API_DOCUMENTATION.md
jobboard/: settings.py  urls.py
jobs/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
jobs/management/commands/: seed_data.py
jobs/migrations/: 0001_initial.py
